--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-minify-css": "~0.4.5",
     "gulp-rename": "~1.2.0",
     "gulp-minify-html": "~0.1.8",
-    "coffee-script": "~1.9.0"
+    "coffee-script": "~1.9.0",
+    "underscore": "~1.7.0"
   }
 }
